crates/monkey-lang/src/parsing/snapshots/parser/ok/lit_num.snap
---
source: crates/monkey-lang/src/parsing/tests.rs
expression: actual
input_file: crates/monkey-lang/src/parsing/snapshots/parser/ok/lit_num.mk

---
Ok(
    File {
        stmts: [
            Expr(
                StmtExpr {
                    expr: Lit(
                        Num(
                            LitNum {
                                num: Number {
                                    token: Token {
                                        span: Span {
                                            start: 0,
                                            end: 6,
                                        },
                                        kind: Number,
                                        text: "132432",
                                    },
                                },
                                value: 132432.0,
                            },
                        ),
                    ),
                    semi: Semicolon {
                        token: Token {
                            span: Span {
                                start: 6,
                                end: 7,
                            },
                            kind: Semicolon,
                            text: ";",
                        },
                    },
                },
            ),
            Expr(
                StmtExpr {
                    expr: Lit(
                        Num(
                            LitNum {
                                num: Number {
                                    token: Token {
                                        span: Span {
                                            start: 8,
                                            end: 11,
                                        },
                                        kind: Number,
                                        text: "987",
                                    },
                                },
                                value: 987.0,
                            },
                        ),
                    ),
                    semi: Semicolon {
                        token: Token {
                            span: Span {
                                start: 11,
                                end: 12,
                            },
                            kind: Semicolon,
                            text: ";",
                        },
                    },
                },
            ),
            Expr(
                StmtExpr {
                    expr: Lit(
                        Num(
                            LitNum {
                                num: Number {
                                    token: Token {
                                        span: Span {
                                            start: 13,
                                            end: 17,
                                        },
                                        kind: Number,
                                        text: "1234",
                                    },
                                },
                                value: 1234.0,
                            },
                        ),
                    ),
                    semi: Semicolon {
                        token: Token {
                            span: Span {
                                start: 17,
                                end: 18,
                            },
                            kind: Semicolon,
                            text: ";",
                        },
                    },
                },
            ),
        ],
    },
)
